# EN-OS-Remote-Assistant-Creator

./: .gitignore  CMakeLists.txt  README.md  assistant_creator.cpp  assistant_creator.h  assistant_creator.ui  build.sh  en-os-remote-assistant-creator.desktop  install_no_compile.sh  main.cpp  resources.qrc
scripts/: install_compile.sh  install_no_compile.sh
translations/: assistant_de.ts  assistant_en.ts  assistant_fr.ts  assistant_ja.ts  assistant_ko.ts  assistant_ru.ts  assistant_uk.ts  assistant_zh.ts
